[gd_scene load_steps=27 format=2]

[ext_resource path="res://sprites/act3settings/bed.png" type="Texture" id=1]
[ext_resource path="res://sprites/act3settings/stairs.png" type="Texture" id=2]
[ext_resource path="res://sprites/Act1settings/sceneone/dark filter.png" type="Texture" id=3]
[ext_resource path="res://sprites/act3settings/shelf2.png" type="Texture" id=4]
[ext_resource path="res://sprites/Act1settings/scenetwo/chair.png" type="Texture" id=5]
[ext_resource path="res://sprites/Act1settings/scenetwo/cuckoo_clock/Untitled708-20200707161423.PNG" type="Texture" id=6]
[ext_resource path="res://sprites/act3settings/homewall.png" type="Texture" id=7]
[ext_resource path="res://sprites/act3settings/window.png" type="Texture" id=8]
[ext_resource path="res://sprites/Act1settings/scenetwo/book.png" type="Texture" id=9]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/act3settings/switch2.png" type="Texture" id=11]
[ext_resource path="res://sprites/act3settings/switch1.png" type="Texture" id=12]
[ext_resource path="res://act3/scene2/booksymbol.gd" type="Script" id=13]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://sprites/UI/dialoguebox copy.png" type="Texture" id=15]
[ext_resource path="res://act3/scene2/desk1.gd" type="Script" id=16]
[ext_resource path="res://sprites/UI/continuesprite copy.png" type="Texture" id=17]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 165.018, 161.33 )

[sub_resource type="DynamicFont" id=3]
size = 100
font_data = ExtResource( 14 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 14 )

[sub_resource type="Animation" id=5]
resource_name = "New Anim"
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 2718.37, -0.25, 0, 0.25, 0, 2718.38, -0.25, 0, 0.25, 0, 2718.37, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 441.036, -0.25, 0, 0.25, 0, 520, -0.25, 0, 0.25, 0, 441.036, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 113.382, 887.27 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 3607.25, 349.753 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="backgrounds" type="Area2D" parent="."]
z_index = -1

[node name="Sprite" type="Sprite" parent="backgrounds"]
position = Vector2( 1918.69, 1083.06 )
scale = Vector2( 1.07537, 1.10374 )
texture = ExtResource( 7 )

[node name="Sprite6" type="Sprite" parent="backgrounds"]
position = Vector2( 2013.94, 1083.06 )
scale = Vector2( 1.123, 1.10374 )
z_index = 3
texture = ExtResource( 3 )

[node name="Sprite7" type="Sprite" parent="backgrounds"]
position = Vector2( 2013.94, 1083.06 )
scale = Vector2( 1.123, 1.10374 )
z_index = 3
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="backgrounds"]
position = Vector2( 1601.24, 1204.43 )
scale = Vector2( 1.37687, 1.10374 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="backgrounds"]
position = Vector2( 985.896, 1600.08 )
scale = Vector2( 4.11398, 3.69196 )
texture = ExtResource( 1 )

[node name="Sprite4" type="Sprite" parent="backgrounds"]
position = Vector2( 1163.55, 598.021 )
scale = Vector2( 3.41116, 5.00975 )
texture = ExtResource( 8 )

[node name="Sprite5" type="Sprite" parent="backgrounds"]
position = Vector2( 2779.06, 1252.59 )
scale = Vector2( 0.828273, 0.806442 )
texture = ExtResource( 4 )

[node name="Sprite8" type="Sprite" parent="backgrounds"]
position = Vector2( 755.028, 1352.89 )
scale = Vector2( 0.828273, 0.806442 )
texture = ExtResource( 6 )

[node name="chest" type="Area2D" parent="."]
z_index = -1
script = ExtResource( 16 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="chest"]
position = Vector2( 3376.41, 1671.4 )
z_index = 1
frames = SubResource( 1 )
frame = 1

[node name="Sprite" type="Sprite" parent="chest"]
position = Vector2( 3381.15, 1666.76 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest"]
position = Vector2( 3132.44, 1619.72 )
shape = SubResource( 2 )

[node name="Label" type="Label" parent="chest"]
margin_left = 3060.22
margin_top = 1148.75
margin_right = 3418.22
margin_bottom = 1248.75
custom_fonts/font = SubResource( 3 )
text = "inspect "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialoguebox" type="Control" parent="chest"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type2" type="AudioStreamPlayer" parent="chest/dialoguebox"]
stream = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="chest/dialoguebox"]
position = Vector2( 2735.5, 769.643 )
scale = Vector2( 1.37034, 1.11169 )
texture = ExtResource( 15 )

[node name="RichTextLabel" type="RichTextLabel" parent="chest/dialoguebox"]
margin_left = 1824.0
margin_top = 597.0
margin_right = 3624.0
margin_bottom = 947.0
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="chest/dialoguebox"]

[node name="continuesprite" type="Sprite" parent="chest/dialoguebox"]
position = Vector2( 2718.38, 520 )
scale = Vector2( 1.38918, 2.39654 )
texture = ExtResource( 17 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="chest/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3904.07, 1315.5 )
shape = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -14.1453, 1322.58 )
shape = SubResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1973.25, 2390.54 )
shape = SubResource( 7 )

[node name="player" parent="StaticBody2D/CollisionShape2D3" instance=ExtResource( 10 )]
position = Vector2( 1626.7, -728.478 )

[node name="Area2D" type="Area2D" parent="."]
z_index = -1
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
position = Vector2( 726.715, 1354.41 )
scale = Vector2( 1.35507, 1.69534 )
frames = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 695.428, 1517.4 )
shape = SubResource( 2 )

[node name="Label2" type="Label" parent="Area2D"]
margin_left = 516.239
margin_top = 1083.64
margin_right = 874.239
margin_bottom = 1183.64
custom_fonts/font = SubResource( 3 )
text = "inspect "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="chest" to="chest" method="_on_chest_body_entered"]
[connection signal="body_exited" from="chest" to="chest" method="_on_chest_body_exited"]
[connection signal="tween_completed" from="chest/dialoguebox/Tween" to="chest" method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
